GRAD2-2306 HD-21559-GRAD - P3 - GRAD is creating blank transcripts